--- a/env.example
+++ b/env.example
@@ -1,8 +1,11 @@
-# Google Cloud Storage Configuration
-GOOGLE_CLOUD_PROJECT_ID=your-project-id
-GOOGLE_CLOUD_KEY_FILE=./gcs-key.json
-GCS_BUCKET_NAME=choyang-cloud-storage-bucket
 
-# Server Configuration
+
+# Google Cloud Storage Configuration
+GOOGLE_CLOUD_PROJECT_ID=lithe-resource-450314-q8
+GCS_BUCKET_NAME=cloudcomputing_bucket1
+GOOGLE_APPLICATION_CREDENTIALS=./service-account-key.json
+
+# App Configuration
 PORT=3000
 NODE_ENV=production
+
